# KDEClassifier

./: .gitignore  LICENSE  README.md  pyproject.toml
kde_classifier/: KDEClassifier.py  __init__.py
tests/: KDEClassifier_orig.py  test_consistency.py
